@@ -43,8 +43,10 @@
     <vc-browse-base-url>https://git1-us-west.apache.org/repos/asf?p=lucene-solr.git;a=tree</vc-browse-base-url>
     <specification.version>@spec.version@</specification.version>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
-    <java.compat.version>1.8</java.compat.version>
-    <jetty.version>8.1.10.v20130312</jetty.version>
+    <java.compat.version>8</java.compat.version>
+    <!-- HACK: the enforce and forbiddenapis plugin does not like new versioning: -->
+    <java.legacy-compat.version>1.${java.compat.version}</java.legacy-compat.version>
+    <jetty.version>9.3.8.v20160314</jetty.version>
 
     <!-- RandomizedTesting library system properties -->
     <tests.iters>1</tests.iters>
@@ -166,7 +168,7 @@
               The checker simply passes by default and only prints a warning.
              -->
             <failOnUnsupportedJava>false</failOnUnsupportedJava>
-            <targetVersion>${java.compat.version}</targetVersion>
+            <targetVersion>${java.legacy-compat.version}</targetVersion>
             <suppressAnnotations>
               <suppressAnnotation>**.SuppressForbidden</suppressAnnotation>
             </suppressAnnotations>
@@ -381,7 +383,7 @@
               <rules>
                 <requireJavaVersion>
                   <message>Java ${java.compat.version}+ is required.</message>
-                  <version>[${java.compat.version},)</version>
+                  <version>[${java.legacy-compat.version},)</version>
                 </requireJavaVersion>
                 <requireMavenVersion>
                   <message>Maven 2.2.1+ is required.</message>
