@@ -110,7 +110,7 @@
           target="@{target}"
           outputDirectory="@{outputDir}"
           javacchome="${build.dir}/javacc"
-          jdkversion="${javac.source}"
+          jdkversion="1.${javac.release}"
       />
       <fixcrlf srcdir="@{outputDir}" includes="*.java" encoding="UTF-8">
         <containsregexp expression="Generated.*By.*JavaCC"/>
